@@ -155,7 +155,7 @@ public class StringBase extends Datatype {
             lengths = new ArrayList<Integer>(1);
             hasFacets = true;
         }
-        this.lengths.add(new Integer(length));
+        this.lengths.add(Integer.valueOf(length));
     }
     
     /*
@@ -168,7 +168,7 @@ public class StringBase extends Datatype {
             minLengths = new ArrayList<Integer>(1);
             hasFacets = true;
         }
-        this.minLengths.add(new Integer(minLength));
+        this.minLengths.add(Integer.valueOf(minLength));
     }
     
     /*
@@ -181,7 +181,7 @@ public class StringBase extends Datatype {
             maxLengths = new ArrayList<Integer>(1);
             hasFacets = true;
         }
-        this.maxLengths.add(new Integer(maxLength));
+        this.maxLengths.add(Integer.valueOf(maxLength));
     }
     
     /*
