@@ -18,9 +18,9 @@
  */
 package org.netbeans.modules.java.hints.jdk;
 
-import javax.lang.model.SourceVersion;
 import org.netbeans.junit.NbTestCase;
 import org.netbeans.modules.java.hints.test.api.HintTest;
+import javax.lang.model.SourceVersion;
 
 /**
  *
@@ -44,6 +44,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        return -1;\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -72,6 +74,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        }\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -99,6 +103,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        return -1;\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -125,6 +131,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        return -1;\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -140,15 +148,4 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                               "}\n");
     }
 
-    @Override
-    protected void runTest() throws Throwable {
-        try {
-            SourceVersion.valueOf("RELEASE_14");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return ;
-        }
-        super.runTest();
-    }
-    
 }
