@@ -46,6 +46,7 @@ import com.sun.source.doctree.UnknownInlineTagTree;
 import com.sun.source.doctree.ValueTree;
 import com.sun.source.doctree.VersionTree;
 import com.sun.source.tree.*;
+import com.sun.source.tree.CaseTree.CaseKind;
 import com.sun.source.tree.MemberReferenceTree.ReferenceMode;
 import com.sun.source.tree.Tree.Kind;
 import com.sun.tools.javac.code.BoundKind;
@@ -63,11 +64,14 @@ import com.sun.tools.javac.model.JavacTypes;
 import com.sun.tools.javac.tree.DocTreeMaker;
 import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.tree.JCTree.*;
+import com.sun.tools.javac.tree.JCTree.JCCaseLabel;
+import com.sun.tools.javac.tree.TreeMaker;
 import com.sun.tools.javac.util.DiagnosticSource;
 import com.sun.tools.javac.util.ListBuffer;
 import com.sun.tools.javac.util.Name;
 import com.sun.tools.javac.util.Names;
 import com.sun.tools.javac.util.Context;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -80,7 +84,6 @@ import javax.lang.model.util.Elements;
 import javax.lang.model.util.Types;
 import javax.tools.JavaFileObject;
 import org.netbeans.api.annotations.common.NonNull;
-import org.netbeans.modules.java.source.TreeShims;
 import static org.netbeans.modules.java.source.save.PositionEstimator.*;
 
 /**
@@ -195,75 +198,47 @@ public class TreeFactory {
     
     public BreakTree Break(CharSequence label) {
         Name n = label != null ? names.fromString(label.toString()) : null;
-        try {
-            return make.at(NOPOS).Break(n);
-        } catch (NoSuchMethodError err) {
-            try {
-                return (BreakTree) make.getClass().getMethod("Break", JCExpression.class).invoke(make.at(NOPOS), label != null ? Identifier(label) : null);
-            } catch (Throwable t) {
-                err.addSuppressed(t);
-                throw throwAny(err);
-            }
-        }
+        return make.at(NOPOS).Break(n);
     }
     
-    public BreakTree Break(ExpressionTree value) {
-        try {
-            return (BreakTree) make.getClass().getMethod("Break", JCExpression.class).invoke(make.at(NOPOS), (JCExpression) value);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+    public YieldTree Yield(ExpressionTree value) {
+        return make.at(NOPOS).Yield((JCExpression) value);
     }
     
+    public DefaultCaseLabelTree DefaultCaseLabel() {
+        return make.at(NOPOS).DefaultCaseLabel();
+    }
+
     public CaseTree Case(ExpressionTree expression, List<? extends StatementTree> statements) {
-        ListBuffer<JCStatement> lb = new ListBuffer<JCStatement>();
-        for (StatementTree t : statements)
-            lb.append((JCStatement)t);
-        try {
-            return make.at(NOPOS).Case((JCExpression)expression, lb.toList());
-        } catch (NoSuchMethodError err) {
-            try {
-                Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-                com.sun.tools.javac.util.List<? extends Object> pats = expression != null ? com.sun.tools.javac.util.List.of((JCExpression)expression) : com.sun.tools.javac.util.List.nil();
-                return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "STATEMENT"), pats, lb.toList(), null);
-            } catch (Throwable t) {
-                err.addSuppressed(t);
-                throw throwAny(err);
-            }
-        }
+        return Case(expression != null ? Collections.singletonList(expression) : Collections.emptyList(), statements);
     }
     
     public CaseTree Case(List<? extends ExpressionTree> expressions, List<? extends StatementTree> statements) {
-        switch (expressions.size()) {
-            case 0: return Case((ExpressionTree) null, statements);
-            case 1: return Case(expressions.get(0), statements);
-        }
-        ListBuffer<JCStatement> lb = new ListBuffer<JCStatement>();
-        for (StatementTree t : statements)
-            lb.append((JCStatement)t);
-        ListBuffer<JCExpression> exprs = new ListBuffer<>();
-        for (ExpressionTree t : expressions)
-            exprs.append((JCExpression)t);
-        try {
-            Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-            return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "STATEMENT"), exprs.toList(), lb.toList(), null);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+        return CaseMultiplePatterns(expressions.isEmpty() ? Collections.singletonList(DefaultCaseLabel()) : expressions, statements);
     }
     
     public CaseTree Case(List<? extends ExpressionTree> expressions, Tree body) {
+        return CaseMultiplePatterns(expressions.isEmpty() ? Collections.singletonList(DefaultCaseLabel()) : expressions, body);
+    }
+    
+    public CaseTree CaseMultiplePatterns(List<? extends CaseLabelTree> expressions, Tree body) {
         ListBuffer<JCStatement> lb = new ListBuffer<>();
-        lb.append(body instanceof ExpressionTree ? (JCStatement) Break((ExpressionTree) body) : (JCStatement) body);
-        ListBuffer<JCExpression> exprs = new ListBuffer<>();
-        for (ExpressionTree t : expressions)
-            exprs.append((JCExpression)t);
-        try {
-            Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-            return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "RULE"), exprs.toList(), lb.toList(), body);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+        lb.append(body instanceof ExpressionTree ? (JCStatement) Yield((ExpressionTree) body) : (JCStatement) body);
+        ListBuffer<JCCaseLabel> exprs = new ListBuffer<>();
+        for (Tree t : expressions)
+            exprs.append((JCCaseLabel)t);
+        return make.at(NOPOS).Case(CaseKind.RULE, exprs.toList(), lb.toList(), (JCTree) body);
+    }
+    
+
+    public CaseTree CaseMultiplePatterns(List<? extends CaseLabelTree> expressions, List<? extends StatementTree> statements) {
+        ListBuffer<JCStatement> lb = new ListBuffer<JCStatement>();
+        for (StatementTree t : statements)
+            lb.append((JCStatement)t);
+        ListBuffer<JCCaseLabel> exprs = new ListBuffer<>();
+        for (Tree t : expressions)
+            exprs.append((JCCaseLabel)t);
+        return make.at(NOPOS).Case(CaseKind.STATEMENT, exprs.toList(), lb.toList(), null);
     }
     
     public CatchTree Catch(VariableTree parameter, BlockTree block) {
@@ -807,8 +782,12 @@ public class TreeFactory {
         return make.at(NOPOS).Switch((JCExpression)expression, cases.toList());
     }
 
-    public Tree SwitchExpression(ExpressionTree expression, List<? extends CaseTree> caseList) {
-        return TreeShims.SwitchExpression(make.at(NOPOS), expression, caseList);
+    public SwitchExpressionTree SwitchExpression(ExpressionTree expression, List<? extends CaseTree> caseList) {
+        ListBuffer<JCTree.JCCase> cases = new ListBuffer<JCTree.JCCase>();
+        for (CaseTree t : caseList) {
+            cases.append((JCTree.JCCase) t);
+        }
+        return make.at(NOPOS).SwitchExpression((JCExpression) expression, cases.toList());
     }
 
     public SynchronizedTree Synchronized(ExpressionTree expression, BlockTree block) {
@@ -920,6 +899,18 @@ public class TreeFactory {
         } catch (Throwable t) {
             throw throwAny(t);
         }
+    }
+    
+    public BindingPatternTree BindingPattern(VariableTree vt) {
+        return make.at(NOPOS).BindingPattern((JCVariableDecl) vt);
+    }
+
+    public GuardedPatternTree GuardedPattern(PatternTree pattern, ExpressionTree guard) {
+        return make.at(NOPOS).GuardPattern((JCPattern) pattern, (JCExpression) guard);
+    }
+
+    public ParenthesizedPatternTree ParenthesizedPattern(PatternTree pattern) {
+        return make.at(NOPOS).ParenthesizedPattern((JCPattern) pattern);
     }
 
     public VariableTree Variable(VariableElement variable, ExpressionTree initializer) {
@@ -1698,7 +1689,7 @@ public class TreeFactory {
         }
         return copy;
     }
-    
+
     /**
      * Represents operation on list
      */
@@ -1914,15 +1905,15 @@ public class TreeFactory {
     }
 
     public ReferenceTree Reference(ExpressionTree qualExpr, CharSequence member, List<? extends Tree> paramTypes) {
-        com.sun.tools.javac.util.List<JCTree> paramTypesList = null;
+        com.sun.tools.javac.util.List<JCTree> paramTypesParam = null;
         if (paramTypes != null) {
             ListBuffer<JCTree> lbl = new ListBuffer<>();
             for (Tree t : paramTypes) {
                 lbl.append((JCTree) t);
             }
-            paramTypesList = lbl.toList();
+            paramTypesParam = lbl.toList();
         }
-        return docMake.at(NOPOS).newReferenceTree("", (JCExpression) qualExpr, member != null ? (Name) names.fromString(member.toString()) : null, paramTypesList);
+        return docMake.at(NOPOS).newReferenceTree("", (JCTree.JCExpression) qualExpr, qualExpr == null ? null : ((JCTree.JCExpression) qualExpr).getTree(), member != null ? (com.sun.tools.javac.util.Name) names.fromString(member.toString()) : null, paramTypesParam);
     }
     
     @SuppressWarnings("unchecked")
